tests/ui/parser/ferris-static-mut.stderr
error: Ferris cannot be used as an identifier
  --> $DIR/ferris-static-mut.rs:1:12
   |
LL | static mut 🦀: &str = "ferris!";
   |            ^^ help: try using their name instead: `FERRIS`

error: aborting due to 1 previous error

